force-app/main/default/objects/ProductRequestLineItem/fields/AMOSDealerMemo__c.field-meta.xml
<CustomField>
    <fullName>AMOSDealerMemo__c</fullName>
    <description>Created by:- Riddhi Mittal
US:- 1393</description>
    <label>AMOSDealerMemo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>