force-app/main/default/objects/ProductRequestLineItem/fields/AMOSMOBIS_SUFFIX__c.field-meta.xml
<CustomField>
    <fullName>AMOSMOBIS_SUFFIX__c</fullName>
    <description>Created by:- Riddhi Mittal
US- 1393 interface user story</description>
    <label>AMOSMOBIS_SUFFIX</label>
    <length>3</length>
    <type>Text</type>
</CustomField>