force-app/main/default/objects/ProductRequestLineItem/fields/AMOSOrderNo__c.field-meta.xml
<CustomField>
    <fullName>AMOSOrderNo__c</fullName>
    <description>Created by :- Riddhi Mittal
US:- 1393</description>
    <label>AMOSOrderNo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>