force-app/main/default/objects/ProductRequestLineItem/fields/AMOSPICKING_NO__c.field-meta.xml
<CustomField>
    <fullName>AMOSPICKING_NO__c</fullName>
    <description>Created by:- Riddhi Mittal
US- 1393</description>
    <label>AMOSPICKING_NO</label>
    <length>12</length>
    <type>Text</type>
</CustomField>