force-app/main/default/objects/ProductRequestLineItem/fields/AMOSREF_NO__c.field-meta.xml
<CustomField>
    <fullName>AMOSREF_NO__c</fullName>
    <description>Created by:- Riddhi Mittal
US- 1393 interface user story</description>
    <label>AMOSREF_NO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>