force-app/main/default/objects/ProductRequestLineItem/fields/AMOSSHIP_TYPE__c.field-meta.xml
<CustomField>
    <fullName>AMOSSHIP_TYPE__c</fullName>
    <description>Created by:- Riddhi Mittal
US- 1393 interface user story</description>
    <label>AMOSSHIP_TYPE</label>
    <length>2</length>
    <type>Text</type>
</CustomField>