force-app/main/default/objects/ProductRequestLineItem/fields/AMOSShipDate__c.field-meta.xml
<CustomField>
    <fullName>AMOSShipDate__c</fullName>
    <description>Created By :- Riddhi Mittal
US:- 1393</description>
    <label>AMOSShipDate</label>
    <length>8</length>
    <type>Text</type>
</CustomField>