force-app/main/default/objects/ProductRequestLineItem/fields/DAOSAmountNDP__c.field-meta.xml
<CustomField>
    <fullName>DAOSAmountNDP__c</fullName>
    <description>최종 판매가 (딜러 DC RATE 적용, 세금 미포함)</description>
    <label>Amount NDP (DAOS)</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>