force-app/main/default/objects/ProductRequestLineItem/fields/DAOSCancelledQty__c.field-meta.xml
<CustomField>
    <fullName>DAOSCancelledQty__c</fullName>
    <label>Cancelled Qty (DAOS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>