force-app/main/default/objects/ProductRequestLineItem/fields/DAOSConfirmPartNo__c.field-meta.xml
<CustomField>
    <fullName>DAOSConfirmPartNo__c</fullName>
    <label>Confirm Part No (DAOS)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>