force-app/main/default/objects/ProductRequestLineItem/fields/DAOSConfirmQty__c.field-meta.xml
<CustomField>
    <fullName>DAOSConfirmQty__c</fullName>
    <label>Confirm Qty (DAOS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>