force-app/main/default/objects/ProductRequestLineItem/fields/DAOSETD__c.field-meta.xml
<CustomField>
    <fullName>DAOSETD__c</fullName>
    <description>ETD Date per order no &amp; line</description>
    <label>ETD (DAOS)</label>
    <length>8</length>
    <type>Text</type>
</CustomField>