force-app/main/default/objects/ProductRequestLineItem/fields/DAOSisConfirmed__c.field-meta.xml
<CustomField>
    <fullName>DAOSisConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Confirmed (DAOS)</label>
    <type>Checkbox</type>
</CustomField>