force-app/main/default/objects/ProductRequestLineItem/fields/DAOSIsCreated__c.field-meta.xml
<CustomField>
    <fullName>DAOSIsCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCreated(DAOS)</label>
    <type>Checkbox</type>
</CustomField>