force-app/main/default/objects/ProductRequestLineItem/fields/DAOSLastAmendCode__c.field-meta.xml
<CustomField>
    <fullName>DAOSLastAmendCode__c</fullName>
    <label>Last Amend Code (DAOS)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>