force-app/main/default/objects/ProductRequestLineItem/fields/DAOSLastBOQty__c.field-meta.xml
<CustomField>
    <fullName>DAOSLastBOQty__c</fullName>
    <description>최종 B/O 수량</description>
    <label>Last BO Qty (DAOS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>