force-app/main/default/objects/ProductRequestLineItem/fields/DAOSLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>DAOSLastModifiedDate__c</fullName>
    <label>Last Modified Date (DAOS)</label>
    <type>DateTime</type>
</CustomField>