force-app/main/default/objects/ProductRequestLineItem/fields/DAOSProcessingQty__c.field-meta.xml
<CustomField>
    <fullName>DAOSProcessingQty__c</fullName>
    <label>Processing Qty (DAOS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>