force-app/main/default/objects/ProductRequestLineItem/fields/DAOSShippedQty__c.field-meta.xml
<CustomField>
    <fullName>DAOSShippedQty__c</fullName>
    <label>Shipped Qty (DAOS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>