force-app/main/default/objects/ProductRequestLineItem/fields/DAOSVATAmount__c.field-meta.xml
<CustomField>
    <fullName>DAOSVATAmount__c</fullName>
    <label>VAT Amount (DAOS)</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>