force-app/main/default/objects/ProductRequestLineItem/fields/ETD_Date1__c.field-meta.xml
<CustomField>
    <fullName>ETD_Date1__c</fullName>
    <label>ETD Date</label>
    <type>Date</type>
</CustomField>