force-app/main/default/objects/ProductRequestLineItem/fields/ExternalIdCXP__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdCXP__c</fullName>
    <externalId>true</externalId>
    <label>External Id (CXP)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>