force-app/main/default/objects/ProductRequestLineItem/fields/ExternalIdDAOS__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdDAOS__c</fullName>
    <externalId>true</externalId>
    <label>External Id (DAOS)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>