force-app/main/default/objects/ProductRequestLineItem/fields/fm_Amount__c.field-meta.xml
<CustomField>
    <fullName>fm_Amount__c</fullName>
    <formula>fm_OrderQty__c * UnitPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>