force-app/main/default/objects/ProductRequestLineItem/fields/fm_DAOSSubmittedDate__c.field-meta.xml
<CustomField>
    <fullName>fm_DAOSSubmittedDate__c</fullName>
    <formula>Parent.DAOSSubmittedDate__c</formula>
    <label>Submitted Date (DAOS)</label>
    <type>DateTime</type>
</CustomField>