force-app/main/default/objects/ProductRequestLineItem/fields/fm_OrderQty__c.field-meta.xml
<CustomField>
    <fullName>fm_OrderQty__c</fullName>
    <formula>QuantityRequested</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>