force-app/main/default/objects/ProductRequestLineItem/fields/fm_ProductCode__c.field-meta.xml
<CustomField>
    <fullName>fm_ProductCode__c</fullName>
    <formula>Product2.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>