force-app/main/default/objects/ProductRequestLineItem/fields/fm_ProductName__c.field-meta.xml
<CustomField>
    <fullName>fm_ProductName__c</fullName>
    <formula>Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>