force-app/main/default/objects/ProductRequestLineItem/fields/fm_TransmissionDate__c.field-meta.xml
<CustomField>
    <fullName>fm_TransmissionDate__c</fullName>
    <formula>Text(Parent.TransmissionDate__c)</formula>
    <label>Transmission Date</label>
    <type>Text</type>
</CustomField>