force-app/main/default/objects/ProductRequestLineItem/fields/IsSuccess__c.field-meta.xml
<CustomField>
    <fullName>IsSuccess__c</fullName>
    <description>S : Success
F : Fail</description>
    <label>Is Success</label>
    <length>1</length>
    <type>Text</type>
</CustomField>