force-app/main/default/objects/ProductRequestLineItem/fields/OrderedPartNo__c.field-meta.xml
<CustomField>
    <fullName>OrderedPartNo__c</fullName>
    <label>Ordered Part No</label>
    <length>18</length>
    <type>Text</type>
</CustomField>