force-app/main/default/objects/ProductRequestLineItem/fields/OrderLineNoCXP__c.field-meta.xml
<CustomField>
    <fullName>OrderLineNoCXP__c</fullName>
    <label>Order Line No (CXP)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>