force-app/main/default/objects/ProductRequestLineItem/fields/OrderLineSuffixDAOS__c.field-meta.xml
<CustomField>
    <fullName>OrderLineSuffixDAOS__c</fullName>
    <label>OrderLineSuffix (DAOS)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>