force-app/main/default/objects/ProductRequestLineItem/fields/Product_Item_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Product_Item_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Mayank Pant
Created Date: 17th Dec 2020
User Story: https://jira.hyundai-autoever.eu/browse/GD-826
Purpose: This field build the relation ship between Product request line item and its associated inventory</description>
    <label>Product Item(Inventory)</label>
    <referenceTo>ProductItem</referenceTo>
    <relationshipLabel>Product Request Line Items</relationshipLabel>
    <relationshipName>Product_Request_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>