force-app/main/default/objects/ProductRequestLineItem/fields/ShippedPartNo__c.field-meta.xml
<CustomField>
    <fullName>ShippedPartNo__c</fullName>
    <description>created by :- Riddhi Mittal
US-1393</description>
    <label>ShippedPartNo</label>
    <length>18</length>
    <type>Text</type>
</CustomField>