force-app/main/default/objects/ProductRequestLineItem/fields/ShippedPartQty__c.field-meta.xml
<CustomField>
    <fullName>ShippedPartQty__c</fullName>
    <description>Created By :- Riddhi Mittal
US:- 1393</description>
    <label>ShippedPartQty</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>