force-app/main/default/objects/ProductRequestLineItem/fields/ShippedQty__c.field-meta.xml
<CustomField>
    <fullName>ShippedQty__c</fullName>
    <label>Shipped Qty (삭제예정)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>