force-app/main/default/objects/ProductRequestLineItem/fields/ShippedTime__c.field-meta.xml
<CustomField>
    <fullName>ShippedTime__c</fullName>
    <description>I/F</description>
    <label>Shipped Time</label>
    <type>DateTime</type>
</CustomField>